# PG-Raytracing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  RayTracing.cpp  cmake_install.cmake  pg  testEntry  testEntry1  tst  tst1  tst3  tstcb  tstdistspr  tstplal  tstquad  tstrcf  tstrcf2  tstrfx
glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
glfw/docs/html/: annotated.html  bug.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  (+64 more)
glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
glfw/src/: Makefile  cmake_install.cmake
glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
project/: BSurfaces.cpp  BSurfaces.h  RayTracing.cpp  camera.cpp  camera.h  geom.h  lights.h
