cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O2")
project(pg)
find_package(OpenGL REQUIRED)
find_package(X11)
include_directories(glfw/include ${OPENGL_INCLUDE_DIRS})
add_subdirectory(glfw)
file(GLOB SOURCES "project/*")
add_executable(pg ${SOURCES})
target_link_libraries(pg glfw  ${OPENGL_LIBRARIES} ${GLFW_LIBRARIES})
